--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'CrisisConnect'
+include ':react-native-blurry'
+project(':react-native-blurry').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-blurry/android')
 include ':react-native-blur'
 project(':react-native-blur').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-blur/android')
 include ':react-native-vector-icons'
