--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "react-native": "0.48.3",
     "react-native-animatable": "^1.2.4",
     "react-native-blur": "^3.1.3",
+    "react-native-blurry": "^0.1.3",
     "react-native-easy-grid": "^0.1.15",
     "react-native-elements": "^0.17.0",
     "react-native-maps": "^0.16.4",
+    "react-native-radio-buttons": "^1.0.0",
+    "react-native-simple-radio-button": "^2.6.1",
     "react-native-vector-icons": "^4.4.0",
     "react-navigation": "^1.0.0-beta.11"
   },
